Remove obsolete files and fix navbar toggler on mobile not showing up

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -88,6 +88,11 @@ td a div:hover {
 }
 
 .album {
+    border-top: 0.3em groove $bg_highlight;
+}
+
+.album-row {
+    margin-top: 1em;
 }
 
 .card {
